fixed static site compile errors

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,5 +1,5 @@
 h1 dev blog
-each article, slug in public.blog.posts.year2015._data
-	p: a(href="/blog/posts/year2015/#{ slug }") #{ article.date } - #{ article.title }
+each article, slug in public.blog.y2015._data
+	p: a(href="/blog/y2015/#{ slug }.html") #{ article.date } - #{ article.title }
 h1 projects
 p: a(href="/bitty/history") Bitty History
