changed lib folder to be compatible with harp dir layout

--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,13 +1,13 @@
 doctype
 html
   head
-    link(rel="stylesheet" href="/_components/bootswatch-dist/css/bootstrap.min.css")
+    link(rel="stylesheet" href="/js/bootswatch-dist/css/bootstrap.min.css")
     link(rel="stylesheet" href="/main.css")
-    link(rel="stylesheet" href="/_components/font-awesome/css/font-awesome.min.css")
-    link(rel="stylesheet" href="/_components/prism/themes/prism.css")
+    link(rel="stylesheet" href="/js/font-awesome/css/font-awesome.min.css")
+    link(rel="stylesheet" href="/js/prism/themes/prism.css")
 
-    script(src="/_components/jquery/dist/jquery.min.js")
-    script(src="/_components/bootswatch-dist/js/bootstrap.min.js")
+    script(src="/js/jquery/dist/jquery.min.js")
+    script(src="/js/bootswatch-dist/js/bootstrap.min.js")
     block head
   body
     div(class="container")
