fixed borken character

--- a/_harp/projects/northlight/GEAR/index.jade
+++ b/_harp/projects/northlight/GEAR/index.jade
@@ -6,9 +6,9 @@ block head
 h2
   p G.E.A.R
 h3 Info
-| Was build by 6 students in the years 2010-2011. All content was 
+| G.E.A.R was designed and developed by a team of 6 students in the years 2010 to 2011. It was part of an assessment in the thrid and fourth semester.
 h3 Description
-| G.E.A.R is a mix between a Jump ‘n’ Run, Puzzle and Platformer. With the help of complex riddles and skill parts it keeps the player entertained. The atmosphere is dark and heavily inspired by LIMBO.
+| G.E.A.R is a mix between a Jump 'n' Run, Puzzle and Platformer. With the help of complex riddles and skill parts it keeps the player entertained. The atmosphere is dark and heavily inspired by LIMBO.
 h3 Awards
 | Place 3 at the Game Forge Newcomer Awards 2011
 h3 Demo
