--- a/_harp/projects/northlight/GEAR/index.jade
+++ b/_harp/projects/northlight/GEAR/index.jade
@@ -1,7 +1,5 @@
 block head
-  link(rel="stylesheet" href="/js/blueimp-gallery/css/blueimp-gallery.min.css")
-  script(src="/js/prism/prism.js")
-  script(src="/js/prism/components/prism-java.js")
+  link(rel="stylesheet" href="/js/magnific-popup/dist/magnific-popup.css")
 
 h2
   p G.E.A.R
@@ -28,13 +26,13 @@ div(class="dropdown")
         |Mac
   
 h3 Screenshots
-div(id="screenshots")
+div(class="screenshots")
   - for (var i=1; i<69; i++)
     if(i < 10)
-      a(href="screenshots/screenshot.gear.0" + i + ".png")
+      a(href="screenshots/screenshot.gear.0" + i + ".png" data-lightbox="screenshots")
         img(src="screenshots/thumbnails/screenshot.gear.0" + i + ".jpg")
     else
-      a(href="screenshots/screenshot.gear." + i + ".png")
+      a(href="screenshots/screenshot.gear." + i + ".png" data-lightbox="screenshots")
         img(src="screenshots/thumbnails/screenshot.gear." + i + ".jpg")
 h3 Gameplay
 |<div class="embed-responsive embed-responsive-16by9">
@@ -47,39 +45,14 @@ h3 Cinematic
 h3 Team
 div(id="team")
   - for (var i=3; i>0; i--)
-    a(href="images/team" + i + ".jpg")
-      img(src="images/team" + i + ".jpg" class="img-responsive")
+    img(src="images/team" + i + ".jpg" class="img-responsive")
     br
-        
-|<div id="blueimp-gallery" class="blueimp-gallery">
-|    <div class="slides"></div>
-|    <h3 class="title"></h3>
-|    <a class="prev">‹</a>
-|    <a class="next">›</a>
-|    <a class="close">×</a>
-|    <a class="play-pause"></a>
-|    <ol class="indicator"></ol>
-|</div>
 
-script(src="/js/blueimp-gallery/js/blueimp-gallery.min.js")
-|<script>
-|document.getElementById('screenshots').onclick = function (event) {
-|    event = event || window.event;
-|    var target = event.target || event.srcElement,
-|        link = target.src ? target.parentNode : target,
-|        options = {index: link, event: event},
-|        links = this.getElementsByTagName('a');
-|    blueimp.Gallery(links, options);
-|};
-|</script>
-|<script>
-|document.getElementById('team').onclick = function (event) {
-|    event = event || window.event;
-|    var target = event.target || event.srcElement,
-|        link = target.src ? target.parentNode : target,
-|        options = {index: link, event: event},
-|        links = this.getElementsByTagName('a');
-|    blueimp.Gallery(links, options);
-|};
-|</script>
-
+script(src="/js/magnific-popup/dist/jquery.magnific-popup.min.js")
+script
+  |$('.screenshots').magnificPopup({
+  |delegate: 'a', // child items selector, by clicking on it popup will open
+  |type: 'image',
+  |gallery:{enabled:true},
+  |mainClass: 'mfp-with-zoom'
+  |});
