added hippo quest project

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -7,4 +7,5 @@ each article, slug in public.blog.y2015._data
 	p: a(href="/blog/y2015/#{ slug }.html") #{ article.date } - #{ article.title }
 h1 projects
 p: a(href="/projects/bitty/history") Bitty History
-p: a(href="/projects/northlight/GEAR") G.E.A.R.
+p: a(href="/projects/northlight/GEAR") G.E.A.R
+p: a(href="/projects/northlight/hippoquest") Hippo Quest
