--- a/_harp/projects/northlight/GEAR/index.jade
+++ b/_harp/projects/northlight/GEAR/index.jade
@@ -27,13 +27,15 @@ div(class="dropdown")
   
 h2 Screenshots
 div(class="screenshots")
-  - for (var i=1; i<69; i++)
-    if(i < 10)
-      a(href="screenshots/screenshot.gear.0" + i + ".png" data-lightbox="screenshots")
-        img(src="screenshots/thumbnails/screenshot.gear.0" + i + ".jpg")
-    else
-      a(href="screenshots/screenshot.gear." + i + ".png" data-lightbox="screenshots")
-        img(src="screenshots/thumbnails/screenshot.gear." + i + ".jpg")
+  div(class="row")
+    - for (var i=1; i<69; i++)
+      div(class="col-xs-3 col-md-1")
+        if(i < 10)
+          a(href="screenshots/screenshot.gear.0" + i + ".png" data-lightbox="screenshots")
+            img(src="screenshots/thumbnails/screenshot.gear.0" + i + ".jpg" class="img-thumbnail bottom5")
+        else
+          a(href="screenshots/screenshot.gear." + i + ".png" data-lightbox="screenshots")
+            img(src="screenshots/thumbnails/screenshot.gear." + i + ".jpg" class="img-thumbnail bottom5")
 h2 Gameplay
 |<div class="embed-responsive embed-responsive-16by9">
 |<iframe src="https://drive.google.com/file/d/0B7W6nOKmJ_PcZnA4T2x5dFNEalE/preview"></iframe>
